# static/swagger.json
@@ -247,6 +247,18 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"sentEmail": {
+				"properties": {
+					"email": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"CategoriesData": {
 				"properties": {
 					"name": {
@@ -333,6 +345,9 @@
 								"schema": {
 									"items": {
 										"properties": {
+											"email": {
+												"type": "string"
+											},
 											"name": {
 												"type": "string"
 											},
@@ -344,6 +359,7 @@
 											}
 										},
 										"required": [
+											"email",
 											"name",
 											"userId",
 											"id"
@@ -613,26 +629,6 @@
 						}
 					}
 				}
-			},
-			"patch": {
-				"operationId": "UpdateOrder",
-				"responses": {
-					"204": {
-						"description": "No content"
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/OrderData"
-							}
-						}
-					}
-				}
 			}
 		},
 		"/order/{id}": {
@@ -652,6 +648,73 @@
 				},
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/mail": {
+			"get": {
+				"operationId": "GetUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"properties": {
+											"email": {
+												"type": "string"
+											},
+											"name": {
+												"type": "string"
+											},
+											"userId": {
+												"type": "string"
+											},
+											"id": {
+												"type": "string"
+											}
+										},
+										"required": [
+											"email",
+											"name",
+											"userId",
+											"id"
+										],
+										"type": "object"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "SendOtp",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/sentEmail"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/categories": {
